// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles url parameters should set focus-node from url parameter 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="location-pathname"
    >
      /
    </div>
    <div
      data-testid="location-search"
    >
      ?focus-node=test-app
    </div>
  </div>
  <div
    class="application"
  >
    <section
      class="ant-layout layout"
    >
      <header
        class="ant-layout-header header"
        style="z-index: 2;"
      >
        <ul
          class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
          role="menu"
        >
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item"
            role="menuitem"
          >
            Pipeline: 
            <button
              class="ant-btn ant-dropdown-trigger"
              data-testid="pipeline-current"
              type="button"
            >
              <span>
                all pipelines
              </span>
            </button>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item ant-menu-item-only-child"
            role="menuitem"
          >
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-allow-clear ant-select-show-search"
              data-testid="node-select"
              style="width: 80px; max-width: 480px;"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    role="combobox"
                    type="search"
                    value="test-app"
                  />
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-clear"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item"
            role="menuitem"
            style="float: right;"
          >
            Metrics refresh: 
            <a
              class="ant-dropdown-trigger"
              href="/#"
            >
              30s 
              <span
                aria-label="down"
                class="anticon anticon-down"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </a>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item ant-menu-item-only-child"
            role="menuitem"
            style="float: right;"
          >
            <button
              class="ant-btn ant-btn-dashed ant-btn-background-ghost"
              type="button"
            >
              <span>
                Update Graphs
              </span>
            </button>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="visibility: hidden; position: absolute; display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
        </ul>
      </header>
      <main
        class="ant-layout-content"
        style="min-height: 100vh; padding-top: 64px; position: relative;"
      >
        <div
          class="ant-row"
          style="position: fixed;"
        >
          <div
            data-testid="graph"
          />
        </div>
        <div
          class="ant-row"
          style="padding: 0px 50px; z-index: 1; top: 400px; position: absolute;"
        >
          <div
            class="details"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
                style="background-color: rgb(74, 78, 77); color: white;"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    test-app - Details
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              >
                <div
                  class="loadingSpinnerContainer"
                >
                  <div
                    class="ant-spin ant-spin-spinning ant-spin-show-text"
                  >
                    <span
                      class="ant-spin-dot ant-spin-dot-spin"
                    >
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                    </span>
                    <div
                      class="ant-spin-text"
                    >
                      Loading...
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </section>
  </div>
</DocumentFragment>
`;

exports[`handles url parameters should set pipeline from url parameter 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="location-pathname"
    >
      /
    </div>
    <div
      data-testid="location-search"
    >
      ?pipeline=test-pipeline
    </div>
  </div>
  <div
    class="application"
  >
    <section
      class="ant-layout layout"
    >
      <header
        class="ant-layout-header header"
        style="z-index: 2;"
      >
        <ul
          class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
          role="menu"
        >
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item"
            role="menuitem"
          >
            Pipeline: 
            <button
              class="ant-btn ant-dropdown-trigger"
              data-testid="pipeline-current"
              type="button"
            >
              <span>
                test-pipeline
              </span>
            </button>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item ant-menu-item-only-child"
            role="menuitem"
          >
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-allow-clear ant-select-show-search"
              data-testid="node-select"
              style="width: 80px; max-width: 480px;"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    role="combobox"
                    type="search"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                >
                  Search Node
                </span>
              </div>
            </div>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item"
            role="menuitem"
            style="float: right;"
          >
            Metrics refresh: 
            <a
              class="ant-dropdown-trigger"
              href="/#"
            >
              30s 
              <span
                aria-label="down"
                class="anticon anticon-down"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                </svg>
              </span>
            </a>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
          <li
            class="ant-menu-item ant-menu-item-only-child"
            role="menuitem"
            style="float: right;"
          >
            <button
              class="ant-btn ant-btn-dashed ant-btn-background-ghost"
              type="button"
            >
              <span>
                Update Graphs
              </span>
            </button>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
            role="menuitem"
            style="visibility: hidden; position: absolute; display: none;"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              role="button"
            >
              <span>
                ···
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
          </li>
        </ul>
      </header>
      <main
        class="ant-layout-content"
        style="min-height: 100vh; padding-top: 64px; position: relative;"
      >
        <div
          class="ant-row"
          style="position: fixed;"
        >
          <div
            data-testid="graph"
          />
        </div>
        <div
          class="ant-row"
          style="padding: 0px 50px; z-index: 1; top: 400px; position: absolute;"
        >
          <div
            class="details"
          >
            <div
              class="ant-card ant-card-bordered"
            >
              <div
                class="ant-card-head"
                style="background-color: rgb(74, 78, 77); color: white;"
              >
                <div
                  class="ant-card-head-wrapper"
                >
                  <div
                    class="ant-card-head-title"
                  >
                    Click on Node  to see Details
                  </div>
                </div>
              </div>
              <div
                class="ant-card-body"
              />
            </div>
          </div>
        </div>
      </main>
    </section>
  </div>
</DocumentFragment>
`;
